re PR c++/38850 (Cannot find inline friend function in template class when called from within a template function)

PR c++/38850
        * pt.c (tsubst_copy_and_build): Tell finish_call_expr to
        accept hidden friends.

From-SVN: r143422